<resources>
    <string name="app_name">CookNow</string>

    <!-- Welcome Screen -->
    <string name="header_screen">100K+ Premium Recipe</string>
    <string name="title_screen">CookNow</string>
    <string name="desc_screen">Cook Smart, Waste Nothing</string>
    <string name="button_screen">Start CookNow</string>

    <!-- Login -->
    <string name="title_login">Hello,</string>
    <string name="subtitle_login">Welcome Back!</string>
    <string name="show_password">Show Password</string>
    <string name="login">Sign In</string>
    <string name="ask_login">Don\'t have an account?</string>

    <!-- Login & Register -->
    <string name="email">Email</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="email_placeholder">Enter Email</string>
    <string name="email_invalid">Invalid Email</string>
    <string name="password">Password</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="password_length">Password at least 8 characters</string>
    <string name="password_placeholder">Enter Password</string>
    <string name="login_success">Login Success!</string>

    <!-- Register -->
    <string name="title_register">Create an account</string>
    <string name="subtitle_register">Let\'s help your account,\nit won\'t take long.</string>
    <string name="consent">Accept terms &amp; Condition </string>
    <string name="register">Sign Up</string>
    <string name="name">Name</string>
    <string name="name_placeholder">Enter Name</string>
    <string name="name_empty">Name cannot be empty</string>
    <string name="name_length">Name at least 4 characters</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_invalid">Password not match</string>
    <string name="retype_password_placeholder">Retype Password</string>
    <string name="ask_register">Already a member?</string>
    <string name="register_success">Register Success!</string>

    <!-- Profile -->
    <string name="profile">Profile</string>
    <string name="picture">picture</string>
    <string name="username">username</string>
    <string name="post_email">post email</string>
    <string name="logout">Logout</string>
    <string name="logout_title">Logout Confirmation</string>
    <string name="logoutMessage">You sure want to Logout?</string>
    <string name="content_home">content_home</string>
    <string name="content_add">content_add</string>
    <string name="content_profil">content_profil</string>

    <!-- HomeMenu -->
    <string name="top_menu">Top Menu</string>
    <string name="recommendation">Recommendation</string>
    <string name="search_recipes">Search Recipes</string>
    <string name="top_ingredients">Top Ingredients</string>
    <string name="chicken">Chicken</string>
    <string name="pork">Pork</string>
    <string name="lamb">Lamb</string>
    <string name="fish">Fish</string>
    <string name="turkey">Turkey</string>
    <string name="vension">Vension</string>
    <string name="veal">Veal</string>
    <string name="duck">Duck</string>
    <string name="rabbit">Rabbit</string>
    <string name="goat">Goat</string>
    <string name="spaghetti">Spaghetti</string>
    <string name="rice">Rice</string>
    <string name="bread">Bread</string>
    <string name="potatoes">Potatoes</string>
    <string name="pasta">Pasta</string>
    <string name="wheat">Wheat</string>
    <string name="corn">Corn</string>
    <string name="oats">Oats</string>
    <string name="menu">Menu</string>

    <!-- Find Recipes -->
    <string name="search_ingredients">Search Ingredients</string>
    <string name="onion">onion</string>
    <string name="garlic">garlic</string>
    <string name="butter">butter</string>
    <string name="egg">egg</string>
    <string name="olive_oil">olive oil</string>
    <string name="flour">flour</string>
    <string name="milk">milk</string>
    <string name="lemon_juice">lemon juice</string>
    <string name="all_purpose_flour">all-purpose flour</string>
    <string name="carrot">carrot</string>
    <string name="bell_pepper">bell pepper</string>
    <string name="empty_string"> </string>
    <string name="tomato">tomato</string>
    <string name="parmesan_cheese">parmesan cheese</string>
    <string name="potato">potato</string>
    <string name="parsley">parsley</string>
    <string name="mayonnaise">mayonnaise</string>
    <string name="vegetable_oil">vegetable oil</string>
    <string name="cream_cheese">cream cheese</string>
    <string name="baking_powder">baking powder</string>
    <string name="celery">celery</string>
    <string name="sour_cream">sour cream</string>
    <string name="boneless_chicken_breast">boneless chicken breast</string>
    <string name="ginger">ginger</string>
    <string name="cumin">cumin</string>
    <string name="soy_sauce">soy sauce</string>
    <string name="honey">honey</string>
    <string name="cinnamon">cinnamon</string>
    <string name="beef">beef</string>
    <string name="extra_virgin_olive_oil">extra virgin olive oil</string>
    <string name="garlic_powder">garlic powder</string>
    <string name="chicken_broth">chicken broth</string>
    <string name="cheddar_cheese">cheddar cheese</string>
    <string name="bacon">bacon</string>
    <string name="oil">oil</string>
    <string name="wine">wine</string>
    <string name="unsalted_butter">unsalted butter</string>
    <string name="vanilla">vanilla</string>
    <string name="mushroom">mushroom</string>
    <string name="lime_juice">lime juice</string>
    <string name="baking_soda">baking soda</string>
    <string name="cilantro">cilantro</string>
    <string name="chili_powder">chili powder</string>
    <string name="worcestershire_sauce">worcestershire sauce</string>
    <string name="kosher_salt">kosher salt</string>
    <string name="bean">bean</string>
    <string name="dijon_mustard">dijon mustard</string>
    <string name="chicken_breast">chicken breast</string>
    <string name="granulated_sugar">granulated sugar</string>
    <string name="basil">basil</string>
    <string name="paprika">paprika</string>
    <string name="orange_juice">orange juice</string>
    <string name="zucchini">zucchini</string>
    <string name="mustard">mustard</string>

    <string name="find_recipes">Find Recipes</string>
    <string name="traditional_spare_ribs_baked">Traditional Spare Ribs Baked</string>
    <string name="loading_find_recipes">Please Wait...</string>

    <!-- List Recipes -->
    <string name="list_recipes">List Recipes</string>
    <string name="rating">0</string>
    <string name="step">Step</string>
    <string name="description_text">Lorem Ipsum tempor incididunt ut labore et dolore,in voluptate velit esse cillum dolore eu fugiat nulla pariatur?</string>
    <string name="netto">100g</string>
    <string name="ingredient">Ingredient</string>
    <string name="tab_1">Ingredient</string>
    <string name="tab_2">Procedure</string>

    <!-- Detail Recipes -->
    <string name="detail_recipe">Detail Recipe</string>
    <string name="rate_recipes">Rate Recipe</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>


</resources>